--- a/GenarationDB/GenarationDB.csproj
+++ b/GenarationDB/GenarationDB.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="DatabaseManager.cs" />
+    <Compile Include="ProductManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableManager.cs" />
@@ -83,6 +84,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="sql\tblSuppliers.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="sql\viewProducts.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
