--- a/GenarationDB/GenarationDB.csproj
+++ b/GenarationDB/GenarationDB.csproj
@@ -37,7 +37,9 @@
       <HintPath>..\packages\Bogus.29.0.2\lib\net40\Bogus.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
